# 214-Project

./: .clang-tidy  .gitignore  Builder.h  CMakeLists.txt  COS214 Report - Flyweight Fighters b2deade92f784ac29dd38cf2faea6961.md  COS214 Report - Flyweight Fighters.md  CleanTable.cpp  CleanTable.h  Colleague.cpp  Colleague.h  Command.h  Complaints.cpp  Complaints.h  ConcreteMediator.cpp  ConcreteMediator.h  ConfirmOrder.cpp  ConfirmOrder.h  CustomizeOrder.cpp  CustomizeOrder.h  Doxyfile  Doxyfile.bak  Facade.cpp  Facade.h  FloorColleague.cpp  FloorColleague.h  GenerateBill.cpp  GenerateBill.h  Iterator.h  KitchenColleague.cpp  KitchenColleague.h  KitchenMediator.cpp  Mediator.cpp  Mediator.h  MenuItem.cpp  MenuItem.h  MergeTables.cpp  MergeTables.h  Observer.h  Order.cpp  Order.h  (+69 more)
.github/workflows/: c-cpp.yml  ci.yml  lint.yml  tests.yml
Diagrams/: Activity Diagram Floor.vpp.bak_000f  Communication diagram Order.vpp  Entire_project_state_diagram.vpp  Entire_project_state_diagram.vpp.bak_000f  Entire_project_state_diagram.vpp.bak_001d  Entire_project_state_diagram.vpp.bak_002d  Floor_Class_Diagram.vpp  Project_Activity_Diagram.vpp  Project_Class_Diagram.vpp  Project_Class_Diagram.vpp.bak_000f  Project_Class_Diagram.vpp.bak_001d  Project_Class_Diagram.vpp.bak_002d  Project_Class_Diagram.vpp.bak_003d  Project_Class_Diagram.vpp.bak_004d  Project_Class_Diagram.vpp.bak_005d  Project_State_Diagram.vpp  Project_State_Diagram.vpp.bak_000f  Project_State_Diagram.vpp.bak_001d  adapter_sequence.vpp  adapter_sequence.vpp.bak_000f  communication_diagram.vpp.bak_000f  communication_diagram.vpp.bak_001d  communication_diagram2.vpp
Diagrams/vpp files/: Entire_project_state_diagram.vpp  Floor_Class_Diagram.vpp  Project_State_Diagram.vpp  State diagram table.vpp  ad_head_seq.vpp  adapter_sequence.vpp  factory_sequence_diagram.vpp  getSeatedSequence.vpp  head_chain_seq.vpp  object_diagram.vpp  project_Communication_diagram.vpp
Doxygen/html/: ad__FloorOrder_8cpp.html  ad__FloorOrder_8cpp__incl.dot  ad__FloorOrder_8h.html  ad__FloorOrder_8h__dep__incl.dot  ad__FloorOrder_8h__incl.dot  ad__FloorOrder_8h_source.html  ad__OrderAdapter_8cpp.html  ad__OrderAdapter_8cpp__incl.dot  ad__OrderAdapter_8h.html  ad__OrderAdapter_8h__dep__incl.dot  ad__OrderAdapter_8h__incl.dot  ad__OrderAdapter_8h_source.html  ad__RestaurantOrder_8cpp.html  ad__RestaurantOrder_8cpp__incl.dot  ad__RestaurantOrder_8h.html  ad__RestaurantOrder_8h__dep__incl.dot  ad__RestaurantOrder_8h__incl.dot  ad__RestaurantOrder_8h_source.html  annotated.html  ca__handler_8h.html  ca__handler_8h__dep__incl.dot  ca__handler_8h__incl.dot  (+118 more)
html/: Colleague_8h.html  Colleague_8h_source.html  Command_8h.html  Command_8h_source.html  Complaints_8h.html  Complaints_8h_source.html  ConcreteMediator_8h.html  ConcreteMediator_8h_source.html  ConfirmOrder_8h.html  ConfirmOrder_8h_source.html  CustomizeOrder_8h.html  CustomizeOrder_8h_source.html  Facade_8h.html  Facade_8h_source.html  FloorColleague_8h.html  FloorColleague_8h_source.html  GenerateBill_8h.html  GenerateBill_8h_source.html  Iterator_8h.html  Iterator_8h_source.html  KitchenColleague_8h.html  KitchenColleague_8h_source.html  Mediator_8h.html  Mediator_8h_source.html  MenuItem_8h.html  MenuItem_8h_source.html  MergeTables_8h.html  MergeTables_8h_source.html  Order_8h.html  Order_8h_source.html  RestaurantTable_8h.html  RestaurantTable_8h_source.html  ServeOrder_8h.html  ServeOrder_8h_source.html  SplitBill_8h.html  SplitBill_8h_source.html  StateEmpty_8h.html  StateEmpty_8h_source.html  StateOccupied_8h.html  StateOccupied_8h_source.html  (+196 more)
kitchen/: AddExtraCheese.cpp  AddExtraCheese.h  AddGarlic.cpp  AddGarlic.h  BBQChickenPizza.cpp  BBQChickenPizza.h  BeefBurger.cpp  BeefBurger.h  Burger.cpp  BurgerChef.cpp  BurgerChef.h  CMakeLists.txt  Chef.cpp  Chef.h  ChickenBurger.h  CustomizationHandler.cpp  CustomizationHandler.h  DoubleBurger.h  FloorOrder.cpp  FloorOrder.h  HawaiianPizza.h  MenuItem.cpp  MenuItem.h  OrderAdapter.cpp  OrderAdapter.h  PepperoniPizza.h  Pizza.h  PizzaChef.cpp  PizzaChef.h  RemoveMushrooms.cpp  RemoveMushrooms.h  RestaurantOrder.cpp  RestaurantOrder.h  ad_FloorOrder.cpp  ad_FloorOrder.h  ad_OrderAdapter.cpp  ad_OrderAdapter.h  ad_RestaurantOrder.h  adapter.h  burger.h  (+27 more)
kitchen/UnitTests/: CMakeLists.txt  factoryTest.cpp  factoryTest.h  factory_unittest.cpp  main.cpp  sum.cpp  sum.h
kitchen/UnitTests/FactoryCode/: ad_RestaurantOrder.cpp  ca_ingredientHandler.h  fa_dishFactory.cpp  si_headChef.h
kitchen/dump/: AddExtraCheese.cpp  AddExtraCheese.h  AddGarlic.cpp  AddGarlic.h  BBQChickenPizza.cpp  BBQChickenPizza.h  BeefBurger.cpp  BeefBurger.h  Burger.cpp  BurgerChef.cpp  BurgerChef.h  Chef.cpp  Chef.h  ChickenBurger.cpp  ChickenBurger.h  CustomizationHandler.cpp  CustomizationHandler.h  DoubleBurger.cpp  DoubleBurger.h  FloorOrder.cpp  FloorOrder.h  HawaiianPizza.cpp  HawaiianPizza.h  MenuItem.cpp  MenuItem.h  OrderAdapter.cpp  OrderAdapter.h  PepperoniPizza.cpp  PepperoniPizza.h  Pizza.cpp  Pizza.h  PizzaChef.cpp  PizzaChef.h  RemoveMushrooms.cpp  RemoveMushrooms.h  RestaurantOrder.cpp  RestaurantOrder.h  burger.h  headChef.cpp  headChef.h  (+2 more)
latex/: Colleague_8h.tex  Colleague_8h_source.tex  Command_8h.tex  Command_8h_source.tex  Complaints_8h.tex  Complaints_8h_source.tex  ConcreteMediator_8h.tex  ConcreteMediator_8h_source.tex  ConfirmOrder_8h.tex  ConfirmOrder_8h_source.tex  CustomizeOrder_8h.tex  CustomizeOrder_8h_source.tex  Facade_8h.tex  Facade_8h_source.tex  FloorColleague_8h.tex  FloorColleague_8h_source.tex  GenerateBill_8h.tex  GenerateBill_8h_source.tex  Iterator_8h.tex  Iterator_8h_source.tex  KitchenColleague_8h.tex  KitchenColleague_8h_source.tex  Mediator_8h.tex  Mediator_8h_source.tex  MenuItem_8h.tex  MenuItem_8h_source.tex  MergeTables_8h.tex  MergeTables_8h_source.tex  Order_8h.tex  Order_8h_source.tex  RestaurantTable_8h.tex  RestaurantTable_8h_source.tex  ServeOrder_8h.tex  ServeOrder_8h_source.tex  SplitBill_8h.tex  SplitBill_8h_source.tex  StateEmpty_8h.tex  StateEmpty_8h_source.tex  StateOccupied_8h.tex  StateOccupied_8h_source.tex  (+140 more)
(+242 files in other folders)
